# SimuRLacra

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  Dockerfile  LICENSE.txt  README.md  algorithms.html  build_docs.sh  domain_randomization.html  environment_wrappers.html  environments.barrett_wam.html  environments.html  environments.mujoco.html  environments.one_step.html  environments.pysim.html  environments.quanser.html  environments.rcspysim.html  exploration.html  genindex.html  index.html  license.md  logger.html  modules.html  objects.inv  plotting.html  policies.html  py-modindex.html  pylint_ignore.py  pyproject.toml  pyrado.html  requirements.txt  sampling.html  search.html  searchindex.js  setup.html  setup_deps.py  setup_docker.sh  setup_env.sh  spaces.html  (+5 more)
RcsPySim/: CMakeLists.txt  setup.py  unittest.sh
RcsPySim/config/BallInTube/: TwoArmLBRHook_trqCtrl.xml  cBallInTube.xml  collisionModel.xml  gBallInTube_trqCtrl.xml  pBallInTube.xml
RcsPySim/config/BallOnPlate/: LBRWithoutLastLink.xml  exBotKuka.xml  ex_config.xml  gBotKuka.xml  gBotKuka_obstacle.xml  gKinematic.xml  gKinematicAngled.xml  pBallOnPlate.xml
RcsPySim/config/BoxFlipping/: cBoxFlipping.xml  collisionModel.xml  gBoxFlipping_common.xml  gBoxFlipping_posCtrl.xml  gBoxFlipping_trqCtrl.xml  pBoxFlipping.xml
RcsPySim/config/BoxLifting/: cBoxLifting.xml  cBoxLiftingSimple.xml  collisionModel.xml  gBoxLiftingSimple_common.xml  gBoxLiftingSimple_posCtrl.xml  gBoxLiftingSimple_trqCtrl.xml  gBoxLifting_common.xml  gBoxLifting_posCtrl.xml  gBoxLifting_trqCtrl.xml  pBoxLifting.xml
RcsPySim/config/BoxShelving/: cBoxShelving.xml  collisionModel.xml  gBoxShelving_posCtrl.xml  gBoxShelving_trqCtrl.xml
RcsPySim/config/MPBlending/: gMPBlending.xml
RcsPySim/config/MiniGolf/: cMiniGolf.xml  ex_config_export.xml  ex_config_gt_export.xml  gMiniGolf.xml  gMiniGolf_FTS.xml  gMiniGolf_common_part1.xml  gMiniGolf_common_part2.xml  gMiniGolf_gt.xml  gMiniGolf_meshes.xml  get_gt_obstacle_angles.py  info.txt  pMiniGolf.xml  pMiniGolf_gt.xml  policy_export.pt  pre_strike_policy_export.pt
RcsPySim/config/Planar3Link/: cPlanar3Link.xml  gPlanar3Link_common.xml  gPlanar3Link_posCtrl.xml  gPlanar3Link_trqCtrl.xml
RcsPySim/config/PlanarInsert/: cPlanarInsert5Link.xml  cPlanarInsert6Link.xml  gPlanarInsert5Link.xml  gPlanarInsert6Link.xml  gPlanarInsert_common.xml  pPlanarInsert.xml
RcsPySim/config/QuanserQube/: gQuanserQube_trqCtrl.xml  pQuanserQube.xml
RcsPySim/config/TargetTracking/: LBR.xml  TargetTracking.xml  TwoArmLBR.xml  collisionModel.xml  exTT_export.xml  exTargetTracking.xml  pTT_simpletime.pth  pTargetTracking.xml  sdh.xml
RcsPySim/config/common/: LBR_posCtrl.xml  LBR_trqCtrl.xml  SDH_posCtrl.xml  SDH_trqCtrl.xml  SimpleEffector_posCtrl.xml  SimpleEffector_trqCtrl.xml  TwoArmLBR_posCtrl.xml  TwoArmLBR_trqCtrl.xml
RcsPySim/doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  Mainpage.dox
RcsPySim/src/cpp/: CMakeLists.txt
RcsPySim/src/cpp/core/: CMakeLists.txt  DataLogger.cpp  DataLogger.h  ECBallInTube.cpp  ECBallOnPlate.cpp  ECBoxFlipping.cpp  ECBoxLifting.cpp  ECBoxLiftingSimple.cpp  ECBoxShelving.cpp  ECMPBlending.cpp  ECMiniGolf.cpp  ECPlanar3Link.cpp  ECPlanarInsert.cpp  ECQuanserQube.cpp  ECTargetTracking.cpp  ExperimentConfig.cpp  ExperimentConfig.h  RcsPyBot.cpp  RcsPyBot.h  RcsSimEnv.cpp  RcsSimEnv.h
RcsPySim/src/cpp/core/action/: AMDynamicalSystemActivation.cpp  AMDynamicalSystemActivation.h  AMIKControllerActivation.cpp  AMIKControllerActivation.h  AMIntegrate1stOrder.cpp  AMIntegrate1stOrder.h  AMIntegrate2ndOrder.cpp  AMIntegrate2ndOrder.h  AMJointControl.cpp  AMJointControl.h  AMJointControlAcceleration.cpp  AMJointControlAcceleration.h  AMJointControlPosition.cpp  AMJointControlPosition.h  AMNormalized.cpp  AMNormalized.h  AMPlateAngPos.cpp  AMPlateAngPos.h  AMPlatePos5D.cpp  AMPlatePos5D.h  ActionModel.cpp  ActionModel.h  ActionModelIK.cpp  ActionModelIK.h  DynamicalSystem.cpp  DynamicalSystem.h
RcsPySim/src/cpp/core/config/: PropertySink.h  PropertySource.cpp  PropertySource.h  PropertySourceXml.cpp  PropertySourceXml.h
RcsPySim/src/cpp/core/control/: ActionModelIKPolicy.cpp  ActionModelIKPolicy.h  ControlPolicy.cpp  ControlPolicy.h  MLPPolicy.cpp  MLPPolicy.h  TorchPolicy.cpp  TorchPolicy.h
RcsPySim/src/cpp/core/initState/: ISSBallInTube.cpp  ISSBallInTube.h  ISSBallOnPlate.cpp  ISSBallOnPlate.h  ISSBoxFlipping.cpp  ISSBoxFlipping.h  ISSBoxLifting.cpp  ISSBoxLifting.h  ISSBoxLiftingSimple.cpp  ISSBoxLiftingSimple.h  ISSBoxShelving.cpp  ISSBoxShelving.h  ISSMPBlending.cpp  ISSMPBlending.h  ISSMiniGolf.cpp  ISSMiniGolf.h  ISSPlanar3Link.cpp  ISSPlanar3Link.h  ISSPlanarInsert.cpp  ISSPlanarInsert.h  ISSQuanserQube.cpp  ISSQuanserQube.h  InitStateSetter.cpp  InitStateSetter.h
RcsPySim/src/cpp/core/observation/: OMBallPos.cpp  OMBallPos.h  OMBodyStateAngular.cpp  OMBodyStateAngular.h  OMBodyStateLinear.cpp  OMBodyStateLinear.h  OMCollisionCost.cpp  OMCollisionCost.h  OMCollisionCostPrediction.cpp  OMCollisionCostPrediction.h  OMCombined.cpp  OMCombined.h  OMComputedVelocity.cpp  OMComputedVelocity.h  OMDynamicalSystemDiscrepancy.cpp  OMDynamicalSystemDiscrepancy.h  OMDynamicalSystemGoalDistance.cpp  OMDynamicalSystemGoalDistance.h  OMForceTorque.cpp  OMForceTorque.h  OMJointState.cpp  OMJointState.h  OMManipulabilityIndex.cpp  OMManipulabilityIndex.h  OMNormalized.cpp  OMNormalized.h  OMPartial.cpp  OMPartial.h  OMTask.cpp  OMTask.h  OMTaskPositions.cpp  OMTaskPositions.h  OMTaskSpaceDiscrepancy.cpp  OMTaskSpaceDiscrepancy.h  ObservationModel.cpp  ObservationModel.h
RcsPySim/src/cpp/core/physics/: BodyParamInfo.cpp  BodyParamInfo.h  ForceDisturber.cpp  ForceDisturber.h  (+23 more)
RcsPySim/src/cpp/hardware/: CMakeLists.txt  ECSRobo.cpp  MiniGolfBot.cpp  PolicyComponent.cpp  PolicyComponent.h  TestBallTracking.cpp  TestBot.cpp  TestBotSim.cpp  TestTargetTracking.cpp
RcsPySim/src/cpp/pyEnv/: CMakeLists.txt  module.cpp
RcsPySim/src/cpp/tests/: CMakeLists.txt  test-main.cpp  test_eigen_matnd.cpp  test_env_run.cpp  test_torch.cpp
RcsPySim/src/python/rcsenv/: __init__.py
(+3851 files in other folders)
